[gd_scene load_steps=4 format=2]

[ext_resource path="res://title/title_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/title.png" type="Texture" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 830.0
margin_right = 1085.0
margin_bottom = 720.0
rect_min_size = Vector2( 128, 0 )
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="ButtonContainer"]
margin_top = 220.0
margin_right = 255.0
margin_bottom = 263.0
text = "START GAME"

[node name="ContinueGame" type="Button" parent="ButtonContainer"]
margin_top = 279.0
margin_right = 255.0
margin_bottom = 322.0
disabled = true
text = "CONTINUE GAME"

[node name="Settings" type="Button" parent="ButtonContainer"]
margin_top = 338.0
margin_right = 255.0
margin_bottom = 381.0
text = "SETTINGS"

[node name="Credits" type="Button" parent="ButtonContainer"]
margin_top = 397.0
margin_right = 255.0
margin_bottom = 440.0
text = "CREDITS"

[node name="Quit" type="Button" parent="ButtonContainer"]
margin_top = 456.0
margin_right = 255.0
margin_bottom = 499.0
text = "QUIT"

[connection signal="mouse_entered" from="ButtonContainer/StartGame" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/ContinueGame" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/ContinueGame" to="." method="_on_ContinueGame_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Settings" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Credits" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/Quit" to="." method="_on_Quit_pressed"]
